WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108159
REGRESSION(
r141070
): Broke debug build
https://bugs.webkit.org/show_bug.cgi?id=108159
Summary
REGRESSION(r141070): Broke debug build
jochen
Reported
2013-01-29 00:18:21 PST
REGRESSION(
r141070
): Broke debug build
Attachments
Patch
(1.29 KB, patch)
2013-01-29 00:18 PST
,
jochen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2013-01-29 00:18:50 PST
Created
attachment 185183
[details]
Patch
jochen
Comment 2
2013-01-29 00:20:24 PST
Comment on
attachment 185183
[details]
Patch Clearing flags on attachment: 185183 Committed
r141071
: <
http://trac.webkit.org/changeset/141071
>
jochen
Comment 3
2013-01-29 00:20:28 PST
All reviewed patches have been landed. Closing bug.
jochen
Comment 4
2013-01-29 00:21:39 PST
Source/WebCore/html/parser/HTMLDocumentParser.cpp:364:23: error: no member named 'isUninitialized' in 'WTF::OwnPtr<WebCore::HTMLToken>'; did you mean to use '->' instead of '.'? ASSERT(m_token.isUninitialized());
Adam Barth
Comment 5
2013-01-29 00:31:33 PST
Thanks for fixenating.
Eric Seidel (no email)
Comment 6
2013-01-29 14:40:06 PST
Thank you Jochen.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug