REGRESSION(r141070): Broke debug build https://bugs.webkit.org/show_bug.cgi?id=108159

Unreviewed build fix.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::pumpTokenizer):

git-svn-id: svn://svn.chromium.org/blink/trunk@141071 bbb929c8-8fbe-4397-9dbb-9b2b20218538